Changed the navigation elements

--- a/Material_Template/templates/android-dot-com/index.html
+++ b/Material_Template/templates/android-dot-com/index.html
@@ -62,13 +62,13 @@
           <!-- Navigation -->
           <div class="android-navigation-container">
             <nav class="android-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Phones</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Tablets</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Wear</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">TV</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Auto</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">One</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Kevin</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Is</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Editing</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">This</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Code</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Right</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Here</a>
             </nav>
           </div>
           <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
