--- a/Material_Template/templates/text-only/index.html
+++ b/Material_Template/templates/text-only/index.html
@@ -65,7 +65,7 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-          <h3>Name &amp; Title</h3>
+          <h3>Web-Dev &amp; Testing</h3>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
